# Lab_Sistemas_Operativos_II_2023_UNC

./: README.md
2023---laboratorio-i-francabrera0/: .gitignore  Makefile  README.md  configFile.conf  launcher.sh
2023---laboratorio-i-francabrera0/include/client/: client.h
2023---laboratorio-i-francabrera0/include/utilities/: colors.h  msgStructs.h  readConfig.h  semStructs.h  shmStructs.h
2023---laboratorio-ii-francabrera0/: CMakeLists.txt  README.md  launcher.sh
2023---laboratorio-ii-francabrera0/include/client/: client.h  clientUtils.h  ipv4Client.h  ipv6Client.h  unixClient.h
2023---laboratorio-ii-francabrera0/include/server/: ipv4Server.h  ipv6Server.h  server.h  serverUtils.h  unixServer.h
2023---laboratorio-ii-francabrera0/include/utils/: macros.h
2023---laboratorio-ii-francabrera0/src/client/: client.c  clientUtils.c  ipv4Client.c  ipv6Client.c  unixClient.c
2023---laboratorio-ii-francabrera0/src/server/: ipv4Server.c  ipv6Server.c  server.c  serverUtils.c  unixServer.c
2023---laboratorio-ii-francabrera0/tests/: test.c
2023---laboratorio-iii-francabrera0/: .gitignore  Makefile  README.md
2023---laboratorio-iii-francabrera0/src/: laboratorio3.c  original.c
2023---laboratorio-iii-francabrera0/tests/: computePattern  computeTest.py  computeTest.sh  timeTest.py  timeTest.sh
2023---laboratorio-iv-francabrera0/: .gitignore  CMakeLists.txt  README.md  launcher.sh
2023---laboratorio-iv-francabrera0/include/: edgeFilter.h  gdalUtils.h
2023---laboratorio-iv-francabrera0/src/: edgeFilter.c  gdalUtils.c  main.c
2023---laboratorio-iv-francabrera0/test/: test.py  test.sh
2023---laboratorio-v-francabrera0/: .gitignore  CMakeLists.txt  README.md  launcher.sh  test.sh
2023---laboratorio-v-francabrera0/src/client/: client.c
2023---laboratorio-v-francabrera0/src/server/: server.c
2023---laboratorio-v-francabrera0/src/test/: test.c
2023---laboratorio-vi-francabrera0/: .gitignore  README.md
2023---laboratorio-vi-francabrera0/client/: client.py
2023---laboratorio-vi-francabrera0/server/: Makefile  go.mod  go.sum
2023---laboratorio-vii-francabrera0/: .gitignore  README.md  serialReader.py
2023---laboratorio-vii-francabrera0/LabVIIFreeRtos/: .cproject  .mxproject  .project  LabVIIFreeRtos.ioc
(+30 files in other folders)
